Included superLU for self-contained build, also fixed missing xerbla and lsame in OpenNL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required (VERSION 2.6)
-project (MeshFix)
+project(MeshFix C CXX)
+
 add_subdirectory(contrib/JMeshLib)
+add_subdirectory(3rd_party)
 
 # Commented out in OSX
 #SET(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
@@ -8,29 +10,29 @@ add_subdirectory(contrib/JMeshLib)
 #SET(CMAKE_EXE_LINKER_FLAGS "-static")
 
 # OSX: Downloaded and compiled superlu from the official website
-add_library(superlu STATIC IMPORTED SHARED)
-find_library(SUPERLU_LIBRARY superlu /usr/lib)
-MESSAGE(STATUS "SUPERLU: " ${SUPERLU_LIBRARY})
+#add_library(superlu STATIC IMPORTED SHARED)
+#find_library(SUPERLU_LIBRARY superlu /usr/lib)
+#MESSAGE(STATUS "SUPERLU: " ${SUPERLU_LIBRARY})
 
 # NOTE: installed the BLAS library from homebrew
-add_library(blas STATIC IMPORTED)
-find_library(BLAS_LIBRARY blas) # usr/lib) Commented out in OSX
-MESSAGE(STATUS "BLAS: " ${BLAS_LIBRARY})
-
+#add_library(blas STATIC IMPORTED)
+#find_library(BLAS_LIBRARY blas) # usr/lib) Commented out in OSX
+#MESSAGE(STATUS "BLAS: " ${BLAS_LIBRARY})
 
 include_directories(
     include
-    /usr/include/superlu
     contrib/JMeshLib/include
     contrib/OpenNL3.2.1/src
     contrib/jrs_predicates
+    3rd_party/superlu/SRC
 )
 
 link_directories(
     ${LINK_DIRECTORIES}
-    ${CMAKE_CURRENT_SOURCE_DIR}/contrib/JMeshLib/lib
+#    ${CMAKE_CURRENT_SOURCE_DIR}/contrib/JMeshLib/lib
 )
 file(GLOB meshfix_h include/*.h)
+
 set(meshfix_src
     contrib/jrs_predicates/jrs_predicates.c
     src/detectIntersections.cpp
@@ -44,18 +46,24 @@ set(meshfix_src
     src/uniform.cpp
     src/cleaning.cpp
 )
-add_custom_command(
-    TARGET meshfix
-    PRE_LINK
-    COMMAND make
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/contrib/JMeshLib/
-)
+#add_custom_command(
+#    TARGET meshfix
+#    PRE_LINK
+#    COMMAND make
+#    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/contrib/JMeshLib/
+#)
+
 if(CMAKE_CXX_SIZEOF_DATA_PTR EQUAL 8)
     ADD_DEFINITIONS(-DIS64BITPLATFORM)  ## needed for 64 bit 
 endif()
+
 ADD_DEFINITIONS(-DNL_USE_SUPERLU)
 if(CMAKE_COMPILER_IS_GNUCXX)
 	set(CMAKE_EXE_LINKER_FLAGS "-Wl,--allow-multiple-definition")
 endif()
+
+message("BLAS_LIBRARY=${BLAS_LIBRARY}")
+message("SUPERLU_LIBRARY=${SUPERLU_LIBRARY}")
+
 add_executable(meshfix ${meshfix_src} ${meshfix_h} meshfix.cpp)
-target_link_libraries(meshfix jmesh ${SUPERLU_LIBRARY} ${BLAS_LIBRARY}) 
+target_link_libraries(meshfix jmesh ${BLAS_LIBRARY} ${SUPERLU_LIBRARY} ) 
